# array-lite

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: array-liteConfig.cmake.in
examples/: CMakeLists.txt  simple.cu
include/nonstd/: array.h
src/: CMakeLists.txt
